--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
       <h1>Isaiah PortFolio</h1>
       <select id="select-page" name="forma" onchange="location = this.value" target="_blank">
           <option select><p>Select Page Here</p></option>
-          <option value="https://superfast812.github.io/Product-landing-Page/"><p>Product Landing Page</p></option>
-          <option value="https://superfast812.github.io/Cat-Photo-App/"><p>Cat Photo App</p></option>
-          <option value="https://superfast812.github.io/Cafe-Menu/"><p>Cafe menu</p></option>
-          <option value="https://superfast812.github.io/Colored-markers/"><p>Colored Markers</p></option>
-          <option value="https://superfast812.github.io/Registration-Form/"><p>Registration Form</p></option>
-          <option value="https://superfast812.github.io/Survey-Form/"><p>Survey Form</p></option>
-          <option value="https://superfast812.github.io/Rothko-Painting/"><p>Rothko Painting</p></option>
-          <option value="https://superfast812.github.io/Photo-Gallery/"><p>Photo Gallery</p></option>
-          <option value="https://superfast812.github.io/Nutrition-Label/"><p>Nutrition Label</p></option>
-          <option value="https://superfast812.github.io/Student-Quiz/"><p>Quiz</p></option>
-          <option value="https://superfast812.github.io/Tribute-Page/"><p>Tribute Page</p></option>
-          <option value="https://superfast812.github.io/Balance-Sheet/"><p>Balance Sheet</p></option>
-          <option value="https://superfast812.github.io/Cat-Painting/"><p>Cat Painting</p></option>
-          <option value="https://superfast812.github.io/Piano/"><p>Piano</p></option>
-          <option value="https://superfast812.github.io/Technical-Documentation/"><p>Technical Documentation</p></option>
-          <option value="https://superfast812.github.io/City-Skyline/"><p>City Skyline</p></option>
-          <option value="https://superfast812.github.io/magazine/">Magazine</option>
-          <option value="https://superfast812.github.io/ferris-wheel/"><p>Ferris Wheel</p></option>
-          <option value="https://superfast812.github.io/Penguin-Painting/"><p>Penguin Painting</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Product-landing-Page/"><p>Product Landing Page</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Cat-Photo-App/"><p>Cat Photo App</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Cafe-Menu/"><p>Cafe menu</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Colored-markers/"><p>Colored Markers</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Registration-Form/"><p>Registration Form</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Survey-Form/"><p>Survey Form</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Rothko-Painting/"><p>Rothko Painting</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Photo-Gallery/"><p>Photo Gallery</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Nutrition-Label/"><p>Nutrition Label</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Student-Quiz/"><p>Quiz</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Tribute-Page/"><p>Tribute Page</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Balance-Sheet/"><p>Balance Sheet</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Cat-Painting/"><p>Cat Painting</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Piano/"><p>Piano</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Technical-Documentation/"><p>Technical Documentation</p></option>
+          <option target="_blank" value="https://superfast812.github.io/City-Skyline/"><p>City Skyline</p></option>
+          <option target="_blank" value="https://superfast812.github.io/magazine/">Magazine</option>
+          <option target="_blank" value="https://superfast812.github.io/ferris-wheel/"><p>Ferris Wheel</p></option>
+          <option target="_blank" value="https://superfast812.github.io/Penguin-Painting/"><p>Penguin Painting</p></option>
         </select>
     </section>
     <section id="welcome-section" class="section3 profile-section">
@@ -54,115 +54,115 @@
       <h1>Project Tiles</h1>
       <div id="project-grid">
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Product-landing-Page/"><h2>Product Landing Page</h2>
+          <a href="https://superfast812.github.io/Product-landing-Page/" target="_blank"><h2>Product Landing Page</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Cat-Photo-App/"><h2>Cat Photo App</h2>
+          <a href="https://superfast812.github.io/Cat-Photo-App/" target="_blank"><h2>Cat Photo App</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Cafe-Menu/"><h2>Cafe Menu</h2>
+          <a href="https://superfast812.github.io/Cafe-Menu/" target="_blank"><h2>Cafe Menu</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Colored-markers/"><h2>Colored Markers</h2>
+          <a href="https://superfast812.github.io/Colored-markers/" target="_blank"><h2>Colored Markers</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Registration-Form/"><h2>Registration Form</h2>
+          <a href="https://superfast812.github.io/Registration-Form/" target="_blank"><h2>Registration Form</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Survey-Form/"><h2>Survey Form</h2>
+          <a href="https://superfast812.github.io/Survey-Form/" target="_blank"><h2>Survey Form</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Rothko-Painting/"><h2>Rothko Painting</h2>
+          <a href="https://superfast812.github.io/Rothko-Painting/" target="_blank"><h2>Rothko Painting</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Photo-Gallery/"><h2>Photo Gallery</h2>
+          <a href="https://superfast812.github.io/Photo-Gallery/" target="_blank"><h2>Photo Gallery</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Nutrition-Label/"><h2>Nutrition Label</h2>
+          <a href="https://superfast812.github.io/Nutrition-Label/" target="_blank"><h2>Nutrition Label</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Student-Quiz/"><h2>Quiz</h2>
+          <a href="https://superfast812.github.io/Student-Quiz/" target="_blank"><h2>Quiz</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Tribute-Page/"><h2>Tribute Page</h2>
+          <a href="https://superfast812.github.io/Tribute-Page/" target="_blank"><h2>Tribute Page</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Balance-Sheet/"><h2>Balance Sheet</h2>
+          <a href="https://superfast812.github.io/Balance-Sheet/" target="_blank"><h2>Balance Sheet</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Cat-Painting/"><h2>Cat Painting</h2>
+          <a href="https://superfast812.github.io/Cat-Painting/" target="_blank"><h2>Cat Painting</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Piano/"><h2>Piano</h2>
+          <a href="https://superfast812.github.io/Piano/" target="_blank"><h2>Piano</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Technical-Documentation/"><h2>Technical Documentation</h2>
+          <a href="https://superfast812.github.io/Technical-Documentation/" target="_blank"><h2>Technical Documentation</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/City-Skyline/"><h2>City Skyline</h2>
+          <a href="https://superfast812.github.io/City-Skyline/" target="_blank"><h2>City Skyline</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/magazine/"><h2>Magazine</h2>
+          <a href="https://superfast812.github.io/magazine/" target="_blank"><h2>Magazine</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/ferris-wheel/"><h2>Ferris Wheel</h2>
+          <a href="https://superfast812.github.io/ferris-wheel/" target="_blank"><h2>Ferris Wheel</h2>
           <div class="project-tile">
           </div>
           </a>
         </div>
         <div class="project-group" id="projects">
-          <a href="https://superfast812.github.io/Penguin-Painting/"><h2>Penguin Painting</h2>
+          <a href="https://superfast812.github.io/Penguin-Painting/" target="_blank"><h2>Penguin Painting</h2>
           <div class="project-tile">
           </div>
           </a>
